--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+    <link rel="website icon" href="Image/websiteIcon.ico" />
   </head>
   <body>
     <div class="main">
@@ -13,7 +14,8 @@
         <div>
           <select name="City" class="lan">
             <option value="Delhi">English</option>
-            <option value="Ap">Hindi</option> </select>
+            <option value="Ap">Hindi</option>
+          </select>
           <button class="signin">Sign In</button>
         </div>
       </nav>
@@ -32,7 +34,6 @@
       </div>
     </div>
     <div class="line"></div>
-    <!-- <div class="firtbox"></div> -->
 
     <section>
       <div class="text">
@@ -43,21 +44,22 @@
         </div>
       </div>
       <div class="Img">
-      <img src="Image/tv.png" alt="tv" />
-      <video src="Videos/section1.m4v "autoplay loop muted></video></div>
+        <img src="Image/tv.png" alt="tv" />
+        <video src="Videos/section1.m4v " autoplay loop muted></video>
+      </div>
     </section>
     <div class="line"></div>
 
     <section>
       <div class="Img">
         <img src="Image/section2img.jpg" alt="tv" />
-        <!-- <video src="Videos/section1.m4v"></video> --></div>
-        <div class="text">
-          <div >Download your shows to watch offline</div>
-          <div>
-            Save your favourites easily and always have something to watch.
-          </div>
+      </div>
+      <div class="text">
+        <div>Download your shows to watch offline</div>
+        <div>
+          Save your favourites easily and always have something to watch.
         </div>
+      </div>
     </section>
     <div class="line"></div>
 
@@ -65,50 +67,201 @@
       <div class="text">
         <div>Watch everywhere</div>
         <div>
-            Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.
+          Stream unlimited movies and TV shows on your phone, tablet, laptop,
+          and TV.
         </div>
       </div>
       <div class="Img">
-      <img src="Image/section3img.png" alt="tv" />
-      <video id="sec-img" src="Videos/netflixvideo.m4v" autoplay loop muted></video></div>
+        <img src="Image/section3img.png" alt="tv" />
+        <video
+          id="sec-img"
+          src="Videos/netflixvideo.m4v"
+          autoplay
+          loop
+          muted
+        ></video>
+      </div>
     </section>
     <div class="line"></div>
 
     <section>
       <div class="Img">
         <img src="Image/section4img.png" alt="tv" />
-        <!-- <video src="Videos/section1.m4v"></video> --></div>
-        <div class="text">
-          <div>Create profiles for kids</div>
-          <div>
-              Send children on adventures with their favourite characters in a space made just for them—free with your membership.
-          </div>
+      </div>
+      <div class="text">
+        <div>Create profiles for kids</div>
+        <div>
+          Send children on adventures with their favourite characters in a space
+          made just for them—free with your membership.
         </div>
-    
-
+      </div>
     </section>
     <div class="line"></div>
     <div class="faq">
-       <h2>Frequently Asked Questions</h2>
-       <div class="boxes">
-        <div class="faqbox">What is Netflix? <div>+</div> </div>
-        <div class="faqbox">How much does Netflix cost?<div>+</div></div>
-        <div class="faqbox">Where can I watch?<div>+</div></div>
-        <div class="faqbox">How do I cancel?<div>+</div></div>
-        <div class="faqbox">What can I watch on Netflix?<div>+</div></div>
-        <div class="faqbox">Is Netflix good for kids?<div>+</div></div>
-       </div>
-       <div class="con">Ready to watch? Enter your email to create or restart your membership.
+      <h2>Frequently Asked Questions</h2>
+      <div class="boxes">
+        <div class="faqbox">
+          What is Netflix?
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M12 4V20M20 12H4"
+                stroke="#000000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="faqbox">
+          How much does Netflix cost?
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M12 4V20M20 12H4"
+                stroke="#000000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="faqbox">
+          Where can I watch?
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M12 4V20M20 12H4"
+                stroke="#000000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="faqbox">
+          How do I cancel?
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M12 4V20M20 12H4"
+                stroke="#000000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="faqbox">
+          What can I watch on Netflix?
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M12 4V20M20 12H4"
+                stroke="#000000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="faqbox">
+          Is Netflix good for kids?
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M12 4V20M20 12H4"
+                stroke="#000000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="con">
+        Ready to watch? Enter your email to create or restart your membership.
         <div class="mail">
           <input type="email" placeholder="Email Address" />
           <button class="btn-big">Get Started &gt;</button>
         </div>
       </div>
-       </div>
     </div>
+
     <div class="line"></div>
-    <div class="footer">
-      
-    </div>
+
+    <footer>
+      <div class="questions">Questions? Call 000-800-919-1694</div>
+      <div class="footer">
+        <div class="footer-item">
+          <a href="faq">FAQ</a>
+          <a href="faq">Investor Relations</a>
+          <a href="faq">Privacy</a>
+          <a href="faq">Speed Test</a>
+        </div>
+
+        <div class="footer-item">
+          <a href="faq">Help Centre</a>
+          <a href="faq">Account</a>
+          <a href="faq">Speed Test</a>
+          <a href="faq">Legal Notices</a>
+        </div>
+        <div class="footer-item">
+          <a href="faq">Media Centre</a>
+          <a href="faq">Privacy</a>
+          <a href="faq">Cookie Preferences</a>
+          <a href="faq">Corporate</a>
+        </div>
+
+        <div class="footer-item">
+          <a href="faq">Contact Us</a>
+          <a href="faq">Speed Test</a>
+          <a href="faq">Legal Notices</a>
+          <a href="faq">Only on Netflix</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
